# s3332482

./: .gitignore  .setup_assistant  LICENSE  README.md  Test.FCStd  Test2.FCStd  Test3.FCStd  Test4.FCStd  harmonic.sdf  my_robot_armarm_ur5_base_linkur5_flange_5000_1.000000_1.000000.ikcache
.devcontainer/: Dockerfile  Dockerfile_scrv2  devcontainer-old.json  devcontainer.json  docker-compose-ubuntu.yml  docker-compose-wsl.yml  docker-compose.yml  entrypoint.sh  install_dependencies.sh  setup_container.bash
cad_designs/: first_robot.FCStd  first_robot_Security.FCStd  first_robot_Security_2.FCStd  first_robot_Security_3.FCStd  first_robot_Security_3_Alt.FCStd  first_robot_Security_3_Alt_2.FCStd  first_robot_Security_3_Alt_3.FCStd  first_robot_Security_3_Alt_3_working.FCStd  first_robot_Security_3_Alt_3_working_version_2.FCStd  first_robot_Security_3_Alt_3_working_version_3.FCStd  first_robot_Security_3_Alt_wheel.FCStd  first_robot_Security_3_wheels.FCStd  first_robot_Test.FCStd  wheel.FCStd
config/: maciv2.urdf.xacro  navigation.yaml  ros2_controllers.yaml  sensors_3d.yaml
launch/: gazebo.launch.py  warehouse_db.launch.py
maciv2/: maciv2.py  moveit.py
models/: cokeworld2.sdf
robot_description/krytn/: krytn.urdf.xacro
robot_description/meshes/: Unnamed_gripper_base.dae
src/bar_examples/krytn/: CMakeLists.txt  package.xml
src/bar_examples/krytn/config/: diffdrive_control.yaml  mapping.yaml  nav.rviz  navigation.yaml  view.rviz
src/bar_examples/krytn/krytn/: app.py  move_krytn_action.py  move_krytn_topic.py
src/bar_examples/krytn/launch/: gazebo.launch.py  mapping.launch.py  navigation.launch.py
src/bar_examples/krytn/robot_description/: krytn.urdf.xacro
src/bar_examples/magni_description/: CMakeLists.txt  package.xml
src/bar_examples/magni_description/meshes/: caster_wheel.dae  front_wheel.dae  magni_body.dae
src/bar_examples/magni_description/urdf/: inertial.xacro  magni.urdf.xacro
src/first_robot/: package.xml  setup.py
src/first_robot_freecad/: CMakeLists.txt  package.xml
src/krytn/: setup.py
src/kyrtyn_tray/: CMakeLists.txt  package.xml
src/maciv2/: package.xml  setup.py
src/maciv2_moveit/: package.xml
src/my_first_robot_freecad/: CMakeLists.txt  package.xml
src/my_robot_arm/: CMakeLists.txt  my_robot_arm.FCStd  package.xml
src/my_robot_arm_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/twist_stamper/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/twist_stamper/twist_stamper/: twist_stamper.py  twist_unstamper.py
(+167 files in other folders)
